<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titlesBuySellLayout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sellTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Sell" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/titlesBuySellSpacer"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/buyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Buy" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dataSellBuyLayout"
        android:layout_below="@id/titlesBuySellLayout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sellDataDollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Sell" />

        <TextView
            android:id="@+id/sellDataCents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/home_Sell" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/sellBuySpacer1"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/buyDataDollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Buy" />

        <TextView
            android:id="@+id/buyDataCents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/home_Buy" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/spreadSpacer"
        android:layout_below="@id/dataSellBuyLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/spreadLayout"
        android:layout_below="@id/spreadSpacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/spreadTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Spread" />

        <TextView
            android:id="@+id/spreadData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="0" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/unitsSpacer"
        android:layout_below="@id/spreadLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titlesUnitsAmountLayout"
        android:layout_below="@id/unitsSpacer"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unitsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Units" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/titlesUnitsAmountSpacer"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/amountsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Amount" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/datasUnitsAmountLayout"
        android:layout_below="@id/titlesUnitsAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/unitsEditText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text=""
            android:inputType="number" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/dataUnitsAmountSpacer"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:orientation="horizontal"/>

        <EditText
            android:id="@+id/amountsEditText"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text=""
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/confirmSpacer"
        android:layout_below="@id/datasUnitsAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttonDateTimeLayout"
        android:layout_below="@id/confirmSpacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_Confirm" />

        <TextView
            android:id="@+id/dateTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_DateTimeStamp" />

        <TextView
            android:id="@+id/dateTimeData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/home_NoDataReceived" />

    </LinearLayout>

</RelativeLayout>